(JS) downloadsDeleteFileCommand.uc.js 1.0.1: fix a bug where opening multiple chrome windows would break the menuitem command in the first window. urlbarMods.uc.js 1.5.7: expand the identity icon drag box styling, make the dimensions of the drag box match dimensions of the urlbar. (CSS): make overlay scrollbars in content optional. overlay scrollbars will still exist in panels, since there's no risk of scrollbars overlapping in panels, and since regular windows scrollbars look hideous in popups. but in content we risk scrollbars overlapping & blocking each other. so now if you want overlay scrollbars in web content, you must enable userChrome.css.overlay-scrollbars.in-content in about:config. add an icon for the new downloads delete file context menuitem. fix a border showing up in the "all downloads" view. fix a new issue with focus/hover/active styles in downloads panel. change overlay scrollbar z-index. there's no perfect z-index since websites use so many different z-indexes for elements. google uses 200 for popups that should appear above scrollbars; while another website I ran into uses 700 for just a floating navbar. previously I set the z-index low because I don't like scrollbars from the base page showing through gmail's attachment preview popup. but I think it's better that popups appear in places they shouldn't, than fail to appear in places they should just bc they're blocked by an ordinary element.

--- a/resources/in-content/library.css
+++ b/resources/in-content/library.css
@@ -82,4 +82,8 @@
         background-color: var(--organizer-hover-background) !important;
         color: var(--organizer-hover-color) !important;
     }
+
+    #downloadsRichListBox {
+        border: none !important;
+    }
 }
